Remove greeting endpoints.
