# app/api.yml
@@ -7,46 +7,6 @@ consumes:
 produces:
   - application/json
 paths:
-  /greeting:
-    get:
-      tags: [Greeting]
-      operationId: app.api.get_greeting
-      summary: Returns a custom greeting.
-      responses:
-        200:
-          description: Return greeting
-          schema:
-            type: object
-          examples:
-            application/json:
-                greeting: "Hello John"
-      security:
-        - basic: []
-    post:
-      tags: [Greeting]
-      operationId: app.api.post_greeting
-      summary: Returns a custom greeting.
-      responses:
-        200:
-          description: Return greeting
-          schema:
-            type: object
-          examples:
-            application/json:
-                greeting: "Hello John"
-      parameters:
-        - in: body
-          name: body
-          schema:
-            type: object
-            properties:
-              name:
-                type: string
-                example: "John"
-            required:
-              - name
-      security:
-        - basic: []
   /user:
     get:
       tags: [user]
